--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       
             <div class="card-footer">
             <form action="" id="form">
-                <input class="form-control" type="text" id="input" autocomplete="off" placeholder="wrtite message here" maxlength="200">
+                <input class="form-control" type="text" id="input" autocomplete="off" placeholder="write message here" maxlength="200">
                 <button class="btn btn-success">Send</button>
             </form>
             </div>
